[gd_scene load_steps=3 format=3 uid="uid://l6ifjsq4hmmm"]

[ext_resource type="Script" path="res://Map/MapLevelCard/MapLevelCard.gd" id="1_yosnm"]
[ext_resource type="PackedScene" uid="uid://dw3ebuicoj5gx" path="res://Map/FlippableCard/FlippableCard.tscn" id="2_7de7e"]

[node name="MapLevelCard" type="Control"]
custom_minimum_size = Vector2(0, 190)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yosnm")

[node name="NodeContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 190.0
grow_horizontal = 2
alignment = 1

[node name="FlippableCard" parent="NodeContainer" instance=ExtResource("2_7de7e")]
layout_mode = 2

[node name="FlippableCard2" parent="NodeContainer" instance=ExtResource("2_7de7e")]
layout_mode = 2

[node name="FlippableCard3" parent="NodeContainer" instance=ExtResource("2_7de7e")]
layout_mode = 2

[node name="FlippableCard4" parent="NodeContainer" instance=ExtResource("2_7de7e")]
layout_mode = 2

[node name="FlippableCard5" parent="NodeContainer" instance=ExtResource("2_7de7e")]
layout_mode = 2

[node name="FlippableCard6" parent="NodeContainer" instance=ExtResource("2_7de7e")]
layout_mode = 2

[node name="FlippableCard7" parent="NodeContainer" instance=ExtResource("2_7de7e")]
layout_mode = 2
